<resources>
    <string name="app_name">wydo</string>
    <string name="start_service_btn">Start</string>
    <string name="stop_service_btn">Stop</string>
    <string name="service_status_caption">Service status:</string>
    <string name="service_status_default">unknown</string>
    <string name="service_status_running">running</string>
    <string name="service_status_stopped">stopped</string>
    <string name="auto_start_caption">autostart</string>
    <string name="storeOnSD_caption">store on SD</string>
    <string name="max_files">Max files</string>
    <string name="periodicity">Periodicity</string>
</resources>
